--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ build-cet:
   script: 
     - mkdir build-cet 
     - mkdir -p ./glibc-cet
-    - cd build-cet && ../configure --prefix=$PWD/../glibc-cet --with-tls --without-selinux --disable-test --disable-nscd --disable-sanity-checks --disable-werror --enable-cet=permissive "CFLAGS=-gdwarf-2 -g3 -O2 -U_FORTIFY_SOURCE -Wno-unused-value" && make -j && make install -j
+    - cd build-cet && ../configure --prefix=/intravirt/glibc-cet/install --with-tls --without-selinux --disable-test --disable-nscd --disable-sanity-checks --disable-werror --enable-cet=permissive "CFLAGS=-gdwarf-2 -g3 -O2 -U_FORTIFY_SOURCE -Wno-unused-value" && make -j && make DESTDIR=$PWD/glibc-cet install -j
   artifacts:
     paths:
       - ./glibc-cet
@@ -16,7 +16,7 @@ build-nocet:
   script: 
     - mkdir build-nocet 
     - mkdir -p ./glibc-nocet
-    - cd build-nocet && ../configure --prefix=$PWD/../glibc-nocet --with-tls --without-selinux --disable-test --disable-nscd --disable-sanity-checks --disable-werror "CFLAGS=-gdwarf-2 -g3 -O2 -U_FORTIFY_SOURCE -Wno-unused_Value" && make -j && make install -j
+    - cd build-nocet && ../configure --prefix=/intravirt/glibc-nocet/install --with-tls --without-selinux --disable-test --disable-nscd --disable-sanity-checks --disable-werror "CFLAGS=-gdwarf-2 -g3 -O2 -U_FORTIFY_SOURCE -Wno-unused_Value" && make -j && make DESTDIR=$PWD/glibc-nocet install -j
   artifacts:
     paths:
       - ./glibc-nocet
